re PR target/30230 (Incorrect ia64 EH info when an EH region ends in the middle of a bundle)

PR target/30230
	* config/ia64/ia64.c (ia64_add_bundle_selector_before): New function.
	(bundling): Use it.

	* g++.dg/eh/ia64-2.C: New test.

From-SVN: r120104